--- a/views/main-ar/project.ejs
+++ b/views/main-ar/project.ejs
@@ -30,7 +30,7 @@
                                             <div class="portfolio-overlay">
                                                 <a class="btn btn-square btn-outline-light mx-1" href="<%=p.img%>"
                                                     data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
-                                                <a class="btn btn-square btn-outline-light mx-1" href="/project-details/<%-p._id%>"><i
+                                                <a class="btn btn-square btn-outline-light mx-1" href="/project-details/<%=p._id%>"><i
                                                         class="fa fa-link"></i></a>
                                             </div>
                                         </div>
