--- a/views/main-en/single-project.ejs
+++ b/views/main-en/single-project.ejs
@@ -5,7 +5,7 @@
                 <div class="row">
                     <div class="col-md-6">
                         <p>
-                            <%= p.desc.en %>
+                            <%- p.desc.en %>
                         </p>
                     </div>
                     <div class="col-md-6">
