--- a/views/main-ar/single-project.ejs
+++ b/views/main-ar/single-project.ejs
@@ -5,7 +5,7 @@
                 <div class="row">
                     <div class="col-md-6">
                         <p>
-                            <%= p.desc.ar %>
+                            <%- p.desc.ar %>
                         </p>
                     </div>
                     <div class="col-md-6">
