--- a/views/main-ar/index.ejs
+++ b/views/main-ar/index.ejs
@@ -246,7 +246,7 @@
 
 
                 <!-- Projects Start -->
-                <div class="container-xxl py-5">
+                <div class="container-xxl py-5" style="margin-bottom: 300px;">
                     <div class="container">
                         <div class="section-title text-center">
                             <h1 class="display-5 mb-5">مشاريعنا</h1>
