--- a/views/main-ar/includes/footer.ejs
+++ b/views/main-ar/includes/footer.ejs
@@ -9,10 +9,11 @@
                 <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+966 055 500 8628 / +966 055 833 9966</p>
                 <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@wood.com.sa</p>
                 <div class="d-flex pt-2">
-                    <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
+                    <!-- <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
                     <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-youtube"></i></a>
-                    <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-linkedin-in"></i></a>
+                    <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-youtube"></i></a> -->
+                    <a class="btn btn-outline-light btn-social" href="https://www.instagram.com/woodmarketing23/"><i
+                            class="fab fa-instagram"></i></a>
                 </div>
             </div>
             <div class="col-lg-6 col-md-6">
