--- a/views/main-en/index.ejs
+++ b/views/main-en/index.ejs
@@ -24,11 +24,17 @@
                         <small>055 833 9966</small>
                     </div>
                     <div class="h-100 d-inline-flex align-items-center">
-                        <!-- <a class="btn btn-sm-square text-primary me-1" href=""><i class="fab fa-facebook-f"></i></a> -->
-                        <!-- <a class="btn btn-sm-square text-primary me-1" href=""><i class="fab fa-twitter"></i></a> -->
-                        <!-- <a class="btn btn-sm-square text-primary me-1" href=""><i class="fab fa-linkedin-in"></i></a> -->
-                        <a class="btn btn-sm-square text-primary me-0"
-                            href="https://www.instagram.com/woodmarketing23/"><i class="fab fa-instagram"></i></a>
+                        <a class="btn btn-sm-square text-primary me-0" href="<%=social.facebook%>"><i
+                                class="fab fa-facebook-f"></i></a>
+                        <a class="btn btn-sm-square text-primary me-0" href="<%=social.twitter%>"><i
+                                class="fab fa-twitter"></i></a>
+                        <a class="btn btn-sm-square text-primary me-0" href="<%=social.youetube%>"><i
+                                class="fab fa-youtube"></i></a>
+                        <a class="btn btn-sm-square text-primary me-0" href="<%=social.insta%>"><i
+                                class="fab fa-instagram"></i></a>
+                        <a class="btn btn-sm-square text-primary me-0" href="<%=social.snapchat%>"> <i
+                                class="fab fa-snapchat"></i>
+                        </a>
                     </div>
                 </div>
             </div>
