--- a/views/main-en/includes/footer.ejs
+++ b/views/main-en/includes/footer.ejs
@@ -9,10 +9,12 @@
                 <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+966 055 500 8628 / +966 055 833 9966</p>
                 <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@wood.com.sa</p>
                 <div class="d-flex pt-2">
-                    <!-- <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
-                    <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-youtube"></i></a> -->
-                    <a class="btn btn-outline-light btn-social" href="https://www.instagram.com/woodmarketing23/"><i
+                    <a class="btn btn-outline-light btn-social" href="<%=social.twitter%>"><i
+                            class="fab fa-twitter"></i></a>
+                    <a class="btn btn-outline-light btn-social" href="<%=social.facebook%>"><i class="fab fa-facebook-f"></i></a>
+                    <a class="btn btn-outline-light btn-social" href="<%=social.youtube%>"><i class="fab fa-youtube"></i></a>
+                    <a class="btn btn-outline-light btn-social" href="<%=social.snapchat%>"><i class="fab fa-snapchat"></i></a>
+                    <a class="btn btn-outline-light btn-social" href="<%=social.insta%>"><i
                             class="fab fa-instagram"></i></a>
                 </div>
             </div>
