--- a/views/admin/includes/side-bar.ejs
+++ b/views/admin/includes/side-bar.ejs
@@ -39,6 +39,11 @@
                     <i class="fs-4 bi-house"></i> <span class="ms-1 d-none d-sm-inline">social media</span>
                 </a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link align-middle px-0" onclick="showElement('password')">
+                    <i class="fs-4 bi-house"></i> <span class="ms-1 d-none d-sm-inline">password</span>
+                </a>
+            </li>
             <!-- <li class="nav-item">
                 <a class="nav-link align-middle px-0" onclick="showElement('faq')">
                     <i class="fs-4 bi-house"></i> <span class="ms-1 d-none d-sm-inline">Frequently Asked Question</span>
