--- a/views/admin/includes/social.ejs
+++ b/views/admin/includes/social.ejs
@@ -24,6 +24,10 @@
                         <label for="face">snapchat</label>
                         <input type="text" name="snap" class="form-control" value="<%=social.snapchat%>">
                     </div>
+                    <div class="mb-3">
+                        <label for="face">whats app</label>
+                        <input type="text" name="whats" class="form-control" value="<%=social.whats%>">
+                    </div>
                     <button class="btn btn-dark" type="submit">submit</button>
                 </form>
                 <%}else{%>
@@ -48,6 +52,10 @@
                         <div class="mb-3">
                             <label for="face">snapchat</label>
                             <input type="text" name="snap" class="form-control">
+                        </div>
+                        <div class="mb-3">
+                            <label for="face">whats</label>
+                            <input type="text" name="whats" class="form-control">
                         </div>
                         <button class="btn btn-dark" type="submit">submit</button>
                     </form>
