--- a/public/main/css/style.css
+++ b/public/main/css/style.css
@@ -105,6 +105,7 @@
 .btn-square,
 .btn-sm-square,
 .btn-lg-square {
+    width: 26px;
     padding: 0;
     display: flex;
     align-items: center;
