--- a/views/main-en/includes/footer.ejs
+++ b/views/main-en/includes/footer.ejs
@@ -20,6 +20,9 @@
                                 class="fab fa-snapchat"></i></a>
                         <a class="btn btn-outline-light btn-social" href="<%=social.insta%>"><i
                                 class="fab fa-instagram"></i></a>
+                        <a class="btn btn-outline-light btn-social"
+                            href="https://api.whatsapp.com/send?phone=<%=social.whats%>"><i
+                                class="fab fa-whatsapp"></i></a>
                     </div>
                     <%}%>
             </div>
