--- a/views/main-en/index.ejs
+++ b/views/main-en/index.ejs
@@ -36,6 +36,10 @@
                             <a class="btn btn-sm-square text-primary me-0" href="<%=social.snapchat%>"> <i
                                     class="fab fa-snapchat"></i>
                             </a>
+                            <a class="btn btn-sm-square text-primary me-0"
+                                href="https://api.whatsapp.com/send?phone=<%=social.whats%>"> <i
+                                    class="fab fa-whatsapp"></i>
+                            </a>
                         </div>
                         <%}%>
                 </div>
